# mono_repo

./: README.md
projects/: crc.rs  java_api.ts  marocs.cpp  p.rs  x86vm.rs
projects/dcf/: Cargo.toml
projects/efistuff/: efi_test.sh
projects/efistuff/chip_data/: build_black_white.sh  build_color.sh  chip_black_and_white.rs  chip_blackwhite.py  chip_color.py  chip_color.rs  header_to_rs.py  install.sh  readme
projects/efistuff/chip_data/chip_black_and_white/: Cargo.toml
projects/efistuff/chip_data/chip_black_and_white/src/: main.rs
projects/efistuff/chip_data/chip_color/: Cargo.toml
projects/efistuff/chip_data/chip_color/src/: main.rs
projects/efistuff/efi_app/: Cargo.toml
projects/efistuff/efi_app/src/: chip_black_and_white.rs  main.rs
projects/efistuff/efi_test/esp/efi/boot/: bootx64.efi
projects/example/: Makefile  Octive.java
projects/example/octive/: Cargo.toml
projects/example/octive/src/: lib.rs
projects/jrp/: build.sh
projects/qjvmll/: Makefile  readme
projects/qjvmll/src/main/java/Server/: Config.java  Main.java  Manifest.java  ThreadManger.java
projects/test_jar/: Main.java  build.sh
random files/: command.txt  java.slope.md
