[package]
name = "uefi_app"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
log = "0.4.21"
uefi = { version = "0.28.0", features = ["alloc", "global_allocator", "logger", "panic_handler", "qemu"] }
uefi-macros = "0.16.0"

[profile.release]
panic = "unwind"

[profile.dev]
panic = "unwind"
